fixed animation shake with backface-visibility: hidden

--- a/style.css
+++ b/style.css
@@ -78,6 +78,8 @@ nav {
 .heading-primary {
   color:#fff;
   text-transform: uppercase;
+
+  backface-visibility: hidden;
 }
 
 .heading-primary-main {
